--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-masked-view/masked-view": "^0.2.0",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "country-code-emoji": "^2.2.0",
@@ -25,6 +26,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-skeleton-content": "^1.0.20",
+    "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
