--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@rainbow-me/animated-charts": "^1.0.0-alpha.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.0",
     "@react-navigation/native": "^5.9.0",
@@ -19,20 +20,25 @@
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-countup": "^0.0.2",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "2.0.0-alpha.6.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-skeleton-content": "^1.0.20",
     "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-table-component": "^1.2.1",
+    "react-native-timeago": "^0.5.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
+    "react-table": "^7.6.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-timeago": "^1.5.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
