--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-chart-kit": "^6.10.0",
     "react-native-countup": "^0.0.2",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "2.0.0-alpha.6.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-skeleton-content": "^1.0.20",
     "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-svg": "^12.1.0",
     "react-native-table-component": "^1.2.1",
     "react-native-timeago": "^0.5.0",
     "react-native-web": "~0.13.12",
