--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rainbow-me/animated-charts": "^1.0.0-alpha.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.0",
+    "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "country-code-emoji": "^2.2.0",
@@ -27,6 +28,7 @@
     "react-native-chart-kit": "^6.10.0",
     "react-native-countup": "^0.0.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.1",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-skeleton-content": "^1.0.20",
