--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-table-component": "^1.2.1",
     "react-native-timeago": "^0.5.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0",
     "react-redux": "^7.2.2",
     "react-table": "^7.6.3",
     "redux": "^4.0.5",
