--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.7.1",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-skeleton-content": "^1.0.20",
