--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rainbow-me/animated-charts": "^1.0.0-alpha.4",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "^1.8.1",
     "@react-native-masked-view/masked-view": "^0.2.0",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
@@ -29,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-chart-kit": "^6.10.0",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-countup": "^0.0.2",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "~1.8.0",
