--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
   },
   "dependencies": {
     "@rainbow-me/animated-charts": "^1.0.0-alpha.4",
-    "@react-native-async-storage/async-storage": "^1.13.4",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "^1.8.1",
-    "@react-native-masked-view/masked-view": "^0.2.0",
+    "@react-native-masked-view/masked-view": "0.2.4",
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "country-code-emoji": "^2.2.0",
-    "expo": "~40.0.0",
+    "expo": "^42.0.0",
     "expo-app-loading": "^1.0.1",
-    "expo-font": "~8.4.0",
-    "expo-linear-gradient": "~8.4.0",
-    "expo-location": "~10.0.0",
-    "expo-permissions": "~10.0.0",
-    "expo-status-bar": "~1.0.3",
+    "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-location": "~12.1.2",
+    "expo-permissions": "~12.1.1",
+    "expo-status-bar": "~1.0.4",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-chart-kit": "^6.10.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-countup": "^0.0.2",
     "react-native-expo-viewport-units": "^0.0.8",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.7.1",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-screens": "~3.4.0",
     "react-native-skeleton-content": "^1.0.20",
     "react-native-skeleton-placeholder": "^3.0.2",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-timeago": "^0.5.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.0.0",
+    "react-native-webview": "11.6.2",
     "react-redux": "^7.2.2",
     "react-table": "^7.6.3",
     "redux": "^4.0.5",
